--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "avabur-bot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Provides functions to work in concert with a Notifications of Avabur webhook. !luck requires mysql, !market gets currency values, !ping replies pong",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
