--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/bobpaw/avabur-bot#readme",
   "dependencies": {
     "discord.js": "^12.3.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "simple-git": "^2.19.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
