--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/bobpaw/avabur-bot#readme",
   "dependencies": {
     "discord.js": "^12.3.1",
+    "mathjs": "^7.1.0",
     "mysql": "^2.18.1",
     "simple-git": "^2.19.0"
   },
