--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "discord.js": "^12.3.1",
     "mathjs": "^7.1.0",
     "mysql": "^2.18.1",
-    "node-request": "0.0.3",
+    "node-fetch": "^2.6.0",
     "simple-git": "^2.19.0"
   },
   "devDependencies": {
