--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avabur-bot",
-  "version": "1.1.0-rc1.3",
+  "version": "1.1.0",
   "description": "Provides functions to work in concert with a Notifications of Avabur webhook. !luck requires mysql, !market gets currency values, !ping replies pong",
   "main": "server.js",
   "scripts": {
