Added ESLint cache to gitignore
Signed-off-by: Aiden Woodruff <aiden.woodruff@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -106,8 +106,11 @@ dist
 # Backup file
 *~
 
-# Secrets file
-secrets.js
-
 # VisualStudio
 .vs/
+
+# ESLint cache
+.eslintcache*
+
+# Secrets file
+secrets.js
