--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mathjs": "^7.1.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.0",
+    "semver": "^7.3.2",
     "simple-git": "^2.19.0"
   },
   "devDependencies": {
