--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ node_js:
  - 13
  - 12
  - 11
+
+before_script:
+ - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
+ 
+script:
+ - fossa init
+ - fossa anaylze
+ - npm test
