--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
 language: node_js
 node_js:
- - node
- - 13
- - 12
- - 11
+  - node
+  - 13
+  - 12
+  - 11
 
-before_script:
- - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
- 
-script:
- - fossa init
- - fossa analyze
- - npm test
+jobs:
+  include:
+    - stage: "FOSSA"
+    node_js: node
+    before_script:
+      - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
+    script:
+      - fossa init
+      - fossa analyze
+    after_success:
+      - fossa test
