--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Provides functions to work in concert with a Notifications of Avabur webhook. !luck requires mysql, !market gets currency values, !ping replies pong",
   "main": "server.js",
   "scripts": {
-    "test": "eslint --cache --cache-location .eslintcache_npm-test . && mocha"
+    "test": "eslint --cache --cache-location .eslintcache_npm-test . && mocha ./test"
   },
   "repository": {
     "type": "git",
