--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Provides functions to work in concert with a Notifications of Avabur webhook. !luck requires mysql, !market gets currency values, !ping replies pong",
   "main": "server.js",
   "scripts": {
-    "test": "eslint --cache --cache-location .eslintcache_npm-test . && mocha -t 4000 ./test"
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
+    "pretest": "eslint --cache --cache-location .eslintcache_npm-pretest .",
+    "test": "nyc --reporter=html --reporter=text mocha ./test",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -31,10 +35,13 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.1.0",
     "eslint": "^7.7.0",
     "mocha": "^8.1.1",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
+    "proxyquire": "^2.1.3",
     "sinon": "^9.0.3"
   }
 }
