Fix travis Coverage stage
Signed-off-by: Aiden Woodruff <aiden.woodruff@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,5 @@ jobs:
     - stage: "Coverage"
       node_js: node
       script:
-        - npm coverage
+        - npm test
+        - npm run coverage
