Only do long FOSSA stuff on master commits

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ jobs:
     - os: windows
     - os: osx
     - stage: "FOSSA"
+      if: branch = master
       node_js: node
       before_script:
         - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
