--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
     "pretest": "eslint --cache --cache-location .eslintcache_npm-pretest .",
-    "test": "nyc --reporter=html --reporter=text mocha ./test",
+    "test": "nyc --reporter=html --reporter=text mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
