--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Provides functions to work in concert with a Notifications of Avabur webhook. !luck requires mysql, !market gets currency values, !ping replies pong",
   "main": "server.js",
   "scripts": {
-    "lint": "eslint .",
-    "lint-fix": "eslint --fix .",
-    "pretest": "eslint --cache --cache-location .eslintcache_npm-pretest .",
+    "lint": "eslint --cache --cache-location .eslintcache .",
+    "lint-fix": "eslint --cache --cache-location .eslintcache --fix .",
+    "pretest": "eslint --cache --cache-location .eslintcache .",
     "test": "nyc --reporter=html --reporter=text mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
