--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
   },
   "homepage": "https://github.com/bobpaw/avabur-bot#readme",
   "dependencies": {
+    "chalk": "^4.1.0",
     "discord.js": "^12.3.1",
+    "loglevel": "^1.7.0",
+    "loglevel-plugin-prefix": "^0.8.4",
     "mathjs": "^7.2.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.0",
-    "simple-git": "^2.20.1"
+    "simple-git": "^2.20.1",
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
