--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.1.0",
     "eslint": "^7.7.0",
+    "eslint-plugin-jsdoc": "^30.3.1",
     "jsdoc": "^3.6.5",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
