--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint-fix": "eslint --cache --cache-location .eslintcache --fix .",
     "pretest": "eslint --cache --cache-location .eslintcache .",
     "test": "nyc --reporter=html --reporter=text mocha",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "docs": "jsdoc -c .jsdocrc.json"
   },
   "repository": {
     "type": "git",
