--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -9,6 +9,14 @@ on:
     - test/**
     - .eslintrc.json
     - .mocharc.json
+  pull_request:
+    branches: [ '**' ]
+    paths:
+    - package.json
+    - lib/**
+    - test/**
+    - .eslintrc.json
+    - .mocharc.json
 
 jobs:
   build:
