--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -3,6 +3,8 @@ name: FOSSA Scan
 on:
   push:
     tags: [ 'v*' ]
+    paths: [ '.github/workflows/fossa.yml' ]
+  workflow_dispatch:
 
 jobs:
   fossa:
