--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -5,8 +5,8 @@ on:
     branches: [ '**' ]
     paths:
     - package.json
-    - lib/**
-    - test/**
+    - 'lib/**'
+    - 'test/**'
     - .eslintrc.json
     - .mocharc.json
     - .github/workflows/ubuntu.yml
@@ -14,8 +14,8 @@ on:
     branches: [ '**' ]
     paths:
     - package.json
-    - lib/**
-    - test/**
+    - 'lib/**'
+    - 'test/**'
     - .eslintrc.json
     - .mocharc.json
     - .github/workflows/ubuntu.yml
@@ -25,7 +25,7 @@ jobs:
   build:
     strategy:
       matrix:
-        version: [12, 14, 16, lts/*, latest]
+        version: [12, 14, 16, 'lts/*', latest]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -33,7 +33,7 @@ jobs:
         with:
           node-version: ${{ matrix.version }}
           check-latest: false
-          cache: "npm"
+          cache: 'npm'
       - name: npm ci
         # if: steps.setup-node.outputs.cache-hit != true
         run: npm ci
@@ -44,7 +44,6 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           flag-name: node-${{ matrix.version }}
           parallel: true
-
   finish:
     needs: build
     runs-on: ubuntu-latest
