--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -39,7 +39,7 @@ jobs:
       - name: npm ci
         # if: steps.setup-node.outputs.cache-hit != true
         run: npm ci
-      - run: npm test
+      - run: npm run coverage:ci
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
         with:
