Also run fossa builds on PRs that update packages
Not sure if there's a way to do inclusive or with push tags and paths
Commits should be in PRs before main so this should cover most cases anyway

--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -3,6 +3,10 @@ name: FOSSA Scan
 on:
   push:
     tags: [ 'v*' ]
+  pull_request:
+    paths:
+    - 'package-lock.json'
+    - .github/workflows/fossa.yml
   workflow_dispatch:
 
 jobs:
