Add fossa api key to fossa test

--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -29,3 +29,5 @@ jobs:
       env:
         FOSSA_API_KEY: ${{ secrets.FOSSA_API_KEY }}
     - run: fossa test
+      env:
+        FOSSA_API_KEY: ${{ secrets.FOSSA_API_KEY }}
